[package]
name = "termbg"
version = "0.4.1-pre"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/termbg"
keywords = ["console", "terminal", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Terminal background color detection"
edition = "2018"


[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "termbg = \"[a-z0-9\\.-]+\"", replace = "termbg = \"{{version}}\""},
    {file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/termbg/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
async-std = "1.9.0"
crossterm = "0.19"
thiserror = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase", "processenv", "impl-default"] }
