[package]
name = "termbg"
version = "0.5.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/termbg"
keywords = ["console", "terminal", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Terminal background color detection"
edition = "2018"


[package.metadata.release]
pre-release-commit-message  = "Prepare to v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file = "README.md", search = "termbg = \"[a-z0-9\\.-]+\"", replace = "termbg = \"{{version}}\""},
    {file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/termbg/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[dependencies]
async-std   = "1"
crossterm   = "0.27"
thiserror   = "1"
is-terminal = "0.4"
tokio       = {version = "1.39.3", features = ["io-util", "net", "rt", "rt-multi-thread", "time"]}
futures     = "0.3.30"
libc        = "0.2.158"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winbase", "processenv", "impl-default"] }
