[package]
name = "termbg"
version = "0.6.2"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/termbg"
keywords = ["console", "terminal", "cli"]
categories = ["command-line-utilities", "command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Terminal background color detection"
edition = "2018"


[package.metadata.release]
pre-release-commit-message = "Prepare to v{{version}}"
tag-message = "Bump version to {{version}}"
tag-prefix = ""
pre-release-replacements = [
    { file = "README.md", search = "termbg = \"[a-z0-9\\.-]+\"", replace = "termbg = \"{{version}}\"" },
    { file = "CHANGELOG.md", search = "Unreleased", replace = "v{{version}}" },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/termbg/compare/v{{version}}...Unreleased) - ReleaseDate" },
]

[dependencies]
crossterm = "0.28"
log = "0.4"
mockall = "0.13.0"
scopeguard = "1.2"
simplelog = "0.12.2"
thiserror = "2"

[dev-dependencies]
either = "1.13.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = [
    "wincon",
    "winbase",
    "processenv",
    "impl-default",
] }
